Revision history for {{$dist->name}}

{{$NEXT}}

0.018     2014-10-04 21:48:34Z
          - clean up HTML generation, for better rendering with recent changes
            to metacpan layout (Graham Knop, PR#4)

0.017     2014-08-16 23:49:11Z
          - updated module counts

0.016     2014-06-29 16:53:57Z
          - welcome our newest members, JTRAMMELL, BENW and NMELNICK!

0.015     2014-02-08 23:44:12Z
          - improved HTML markup for web documentation

0.014     2013-11-29 20:11:02Z
          - add 'category' interface, to match what is given to other
            Acme::CPANAuthors::* modules

0.013     2013-10-26 17:01:19Z
          - welcome CARLOS, our latest member!

0.012     2013-10-24 05:25:54Z
          - author data is now generated using the 00whois.xml document,
            rather than 01mailrc.txt, to get non-asciified author names
            (requires encoding fixes in new Dist::Zilla)

0.011     2013-09-28 02:04:33Z
          - more diagnostic updates to siblings test
          - more authors added

0.010     2013-09-25 16:56:23Z
          - updated siblings test to help diagnose which other
            Acme::CPANAuthors:: module out there has a bad $VERSION

0.009     2013-09-24 04:32:45Z
          - more authors added (thanks, Сергей Романов!)

0.008     2013-08-29 05:07:48Z
          - new test added to track down encoding errors in other author
            modules, with the help of cpantesters

0.007     2013-08-20 01:54:44Z
          - further simplified the build templating code, to take advantage of
            new features of [MungeFile::WithData]
          - added tooltip for each avatar image, providing PAUSE id, name, and
            number of distributions
          - added ORCHEW, VOJ

0.006     2013-08-16 05:32:38Z
          - proper fix for html image spacing (for real this time?)
          - split off file munging code (run at build time) into its own
            distribution (Dist::Zilla::Plugin::MungeFile::WithData).
