@@ -26,10 +26,10 @@ Test::Warnings = 0
 ; these are used in the templating code, that is replaced at dzil build time
 ; with the fetched author data.
 ; authordep HTTP::Tiny = 0
+; JSON::MaybeXS = 0
 ; authordep Acme::CPANAuthors = 0.23
 ; authordep Acme::CPANAuthors::Factory = 0
 ; authordep Parse::CPAN::Whois = 0
-; authordep Gravatar::URL = 0
 ; HTMl::Entities = 0
 ; authordep perl = 5.010
 ; authordep Dist::Zilla = 5.001                                 ; TRIAL
