@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - fix a few gravatars in html documentation by using gravatars as
+            configured on metacpan, rather than asking Acme::CPANAuthors
 
 0.018     2014-10-04 21:48:34Z
           - clean up HTML generation, for better rendering with recent changes
